added airport kpis

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,3 +4,11 @@ venvPath = "."
 venv = ".venv"
 pythonVersion = "3.12"
 typeCheckingMode = "basic"
+
+[dependency-groups]
+dev = [
+    "matplotlib>=3.10.7",
+    "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
+    "statsmodels>=0.14.5",
+]
