--- a/frontend_2_WITH_TYPESCRIPT/package.json
+++ b/frontend_2_WITH_TYPESCRIPT/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend2",
+  "name": "dcc_dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,7 +15,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-simple-maps": "^3.0.0",
-    "recharts": "^2.15.4"
+    "recharts": "^2.15.4",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
